--- a/readme.org
+++ b/readme.org
@@ -54,19 +54,23 @@ entries to the list (e.g., =ntree= for a random survival forest).
 #+END_SRC
 
 #+RESULTS:
+: Loading required package: Matrix
+: Loaded glmnet 4.1-8
 
 Below we use the same list of learners to learn the cumulative hazards for cause
-1, cause 2, and censoring. The state learner returns a =data.table= of triples
-of learners sorted according to their joint performance in predicting the state
-of the observed data in some time interval. Here we use an interval of 5 years.
+1, cause 2, and censoring. The state learner returns a =list= consisting of 1) a
+=data.table= of triples of learners sorted according to their joint performance
+in predicting the state of the observed data in the interval 0 to =time=, and 2)
+the top ranked triple of models fitted to the full data. Here we use an interval
+of 5 years and show the 6 highest ranked triples.
 #+BEGIN_SRC R :exports both
-set.seed(111)
-sl = statelearner(learners = list(cause1 = learners,
-                                  cause2 = learners,
-                                  censor = learners),
-                  data = Melanoma,
-                  time = 5*365.25)
-head(sl)
+  set.seed(111)
+  sl = statelearner(learners = list(cause1 = learners,
+				    cause2 = learners,
+				    censor = learners),
+		    data = Melanoma,
+		    time = 5*365.25)
+  head(sl$cv_fit)
 #+END_SRC
 
 #+RESULTS:
@@ -79,19 +83,6 @@ head(sl)
 : 6:     rf cox_penalty cox_penalty 240.1687 1
 
 ** Use for targeted estimation
-We can fit the triple of models ranked highest by the state learner to the full
-data as follows.
-
-#+BEGIN_SRC R
-  ## format data:
-  wd_dat <- form_data(Melanoma)
-  cause1_fit <- do.call(fit_cause_model, c(learners[[sl[1, cause1]]], list(data = wd_dat, cause = "cause1")))
-  cause2_fit <- do.call(fit_cause_model, c(learners[[sl[1, cause2]]], list(data = wd_dat, cause = "cause2")))
-  censor_fit <- do.call(fit_cause_model, c(learners[[sl[1, censor]]], list(data = wd_dat, cause = "censor")))
-#+END_SRC
-
-#+RESULTS:
-
 We estimate the standardized risk difference between patient with and without
 ulcers for both death of malignant melanoma (cause=1) and death from other
 causes (cause=2). To do so, we need an estimate of the "treatment" mechanism,
@@ -123,9 +114,9 @@ We can now estimate the ATE using the fitted nuisance models.
 #+BEGIN_SRC R
   ate_est <- os_abs_risk_ate(data = Melanoma, 
 			     eval_times = c(2,5)*365.25,
-			     fit_1 = cause1_fit,
-			     fit_2 = cause2_fit,
-			     fit_cens = censor_fit,
+			     fit_1 = sl$fitted_winners$cause1,
+			     fit_2 = sl$fitted_winners$cause2,
+			     fit_cens = sl$fitted_winners$censor,
 			     fit_treat = treat_fit)
 #+END_SRC
 
@@ -133,12 +124,12 @@ We can now estimate the ATE using the fitted nuisance models.
 
 Below we show the estimated risk difference for 
 #+BEGIN_SRC R :exports both
-ate_est[effect=="ATE"]
+ate_est[effect=="ATE" & est_type=="one-step"]
 #+END_SRC
 
 #+RESULTS:
-:     cause    time effect        est        see       lower     upper
-: 1: cause1  730.50    ATE 0.05638786 0.02677092  0.00391686 0.1088589
-: 2: cause2  730.50    ATE 0.11065602 0.02737314  0.05700467 0.1643074
-: 3: cause1 1826.25    ATE 0.05699237 0.05786330 -0.05641970 0.1704044
-: 4: cause2 1826.25    ATE 0.18535470 0.06423254  0.05945892 0.3112505
+:     cause    time effect est_type        est        see       lower     upper
+: 1: cause1  730.50    ATE one-step 0.05638786 0.02677092  0.00391686 0.1088589
+: 2: cause2  730.50    ATE one-step 0.08763156 0.08163485 -0.07237275 0.2476359
+: 3: cause1 1826.25    ATE one-step 0.05699237 0.05786330 -0.05641970 0.1704044
+: 4: cause2 1826.25    ATE one-step 0.10442644 0.08226031 -0.05680378 0.2656567
