--- a/experiments/tmp-summarize-results.tex
+++ b/experiments/tmp-summarize-results.tex
@@ -1,4 +1,4 @@
-% Created 2023-11-22 Wed 08:53
+% Created 2023-11-29 Wed 11:31
 % Intended LaTeX compiler: pdflatex
 \documentclass[a4paper,danish]{article}
 \usepackage[utf8]{inputenc}
@@ -30,17 +30,16 @@
 \begin{document}
 
 \maketitle
-\section{Super learners}
-\label{sec:org4d4629b}
-In all simulation studies, we compare five super learners, which are listed
-below. To evaluate performance super learner, we use an independent data set of
-10.000 uncensored samples and calculate the integrated Brier score in this data
-set. All results are based on 500 simulated data sets.
+\section{The state learner vs IPCW super learners}
+\label{sec:org4c83351}
+
+We compare the state learner to two IPCW-based super learners using different
+estimators of the censoring distribution. As benchmark we use the (discrete)
+oracle. This gives the following 4 super learners.
+
 
 \begin{enumerate}
 \item The state learner (referred to as \texttt{statelearner}).
-\item The super learner proposed in \citep{westling2021inference} (referred to as
-\texttt{survSL}).
 \item A super learner based on the estimated integrated Brier score, where the
 censoring mechanism is estimated with the Kaplan-Meier estimator (referred to
 as \texttt{ipcw\_km}).
@@ -48,148 +47,57 @@ as \texttt{ipcw\_km}).
 censoring mechanism is estimated with a Cox model that includes all available
 covariates as main effects (referred to as \texttt{ipcw\_cox}).
 \item The (discrete) oracle super learner, which picks the model that minimizes the
-Brier score in the independent data of 10.000 uncensored samples (referred to
+Brier score in an independent data set of 10.000 uncensored samples (referred to
 as \texttt{oracle}).
 \end{enumerate}
 
-Only the super learners 1., 2., and 3. provides estimates of the censoring distribution.
-
-\section{Zelefsky based simulation}
-\label{sec:orgdc8a899}
-We generate data in four different ways:
-
+We used data generated in two different ways:
 \begin{enumerate}
 \item Data as generated in \citep{gerds2013estimating} (referred to as \texttt{original}).
 \item As in 1., but where censoring in completely independent of covariates
 (referred to as \texttt{indep\_cens}).
-\item Same censoring mechanism as in 1., but where the outcome depend only on one
-of the covariates (referred to as \texttt{simple\_effect})
-\item As in 1., but we add 5 independent standard Guassian covariates with no
-effect on neither outcome nor censoring (referred to as \texttt{noise}).
 \end{enumerate}
 
-\clearpage
+To evaluate performance super learner, we use an independent data set of 10.000
+uncensored samples and calculate the integrated Brier score in this data set.
+All results are based on 500 simulated data sets.
 
-\subsection{Kaplan-Meier, Cox, and random forest}
-\label{sec:org3ebe586}
-In this setting, we include the following learners in all libraries:
+\begin{center}
+\includegraphics[width=.9\linewidth]{/tmp/tmp-fig-sl-plot1.pdf}
+\end{center}
 
-\begin{itemize}
-\item The Kaplan-Meier estimator
-\item A Cox model with main effects
-\item A random forest based on 50 trees
-\end{itemize}
+\clearpage 
 
 
-\begin{figure}[htbp]
-\centering
-\includegraphics[width=1\linewidth]{/tmp/babel-IUB42s/figure-EtEIk3.pdf}
-Zelefsky simulation setting using library consisting of Kaplan-Meier, Cox model, and random forests
-\end{figure}
+\section{The state learner vs SurvSL}
+\label{sec:org09707c3}
 
-\clearpage
+We compare the state learner to the super learner proposed by
+\cite{westling2021inference}. As benchmark we use again the (discrete) oracle.
+This gives the following 3 super learners.
 
-\subsection{Add LASSO}
-\label{sec:org98a9507}
-In this setting we add a learner to all libraries, so that all libraries include
-the learners:
-
-\begin{itemize}
-\item The Kaplan-Meier estimator
-\item A Cox model with main effects
-\item A random forest based on 50 trees
-\item A penalized Cox model with main effects, where the \(\|\blank\|_1\) penalty
-(LASSO) is used and the penalty parameter is selected using cross-validation
-based on Cox' partial likelihood
-\end{itemize}
-
-\begin{figure}[htbp]
-\centering
-\includegraphics[width=1\linewidth]{/tmp/babel-IUB42s/figure-KMJCXV.pdf}
-Zelefsky simulation setting including LASSO into the library
-\end{figure}
-
-\clearpage
-
-
-\section{Effect of number of variables}
-\label{sec:org2e42afe}
-We generate data in three different way:
 
 \begin{enumerate}
-\item Outcome and censoring depends on one binary covariate (\(X_1\)). Another
-continuous covariate (\(X_2\)) that is correlated with \(X_1\) is generated.
-\item Same as in 1., but we also add 4 independent Gaussian covariates (\(X_3,
-   \dots X_6\)).
-\item Same as in 1., but we also add 9 independent Gaussian covariates (\(X_3,
-   \dots X_{11}\)).
+\item The state learner (referred to as \texttt{statelearner}).
+\item The super learner proposed in \citep{westling2021inference} (referred to as
+\texttt{survSL}).
+\item The (discrete) oracle super learner, which picks the model that minimizes the
+Brier score in an independent data set of 10.000 uncensored samples (referred to
+as \texttt{oracle}).
 \end{enumerate}
 
-\subsection{Kaplan-Meier, Cox, and random forest}
-\label{sec:org7f2bb4f}
-In this setting, we include the following learners in all libraries:
+We use the same data-generating mechanisms and method of evaluation as described
+in the section above.
 
-\begin{itemize}
-\item The Kaplan-Meier estimator
-\item A Cox model with main effects
-\item A random forest based on 50 trees
-\end{itemize}
+\begin{center}
+\includegraphics[width=.9\linewidth]{/tmp/tmp-fig-sl-plot2.pdf}
+\end{center}
 
-\begin{figure}[htbp]
-\centering
-\includegraphics[width=1\linewidth]{/tmp/babel-IUB42s/figure-TImPsh.pdf}
-Zelefsky simulation setting using library consisting of Kaplan-Meier, Cox model, and random forests
-\end{figure}
-
-\clearpage
-
-\subsection{Add LASSO}
-\label{sec:orgf3d57c9}
-In this setting we add a learner to all libraries, so that all libraries include
-the learners:
-
-\begin{itemize}
-\item The Kaplan-Meier estimator
-\item A Cox model with main effects
-\item A random forest based on 50 trees
-\item A penalized Cox model with main effects, where the \(\|\blank\|_1\) penalty
-(LASSO) is used and the penalty parameter is selected using cross-validation
-based on Cox' partial likelihood
-\end{itemize}
-
-\begin{figure}[htbp]
-\centering
-\includegraphics[width=1\linewidth]{/tmp/babel-IUB42s/figure-ozs9vG.pdf}
-Zelefsky simulation setting including LASSO into the library
-\end{figure}
-
-\subsection{Add LASSO and elastic net}
-\label{sec:org062c3d9}
-In this setting we add a learner to all libraries, so that all libraries include
-the learners:
-
-\begin{itemize}
-\item The Kaplan-Meier estimator
-\item A Cox model with main effects
-\item A random forest based on 50 trees
-\item A penalized Cox model with main effects, where the \(\|\blank\|_1\) penalty
-(LASSO) is used and the penalty parameter is selected using cross-validation
-based on Cox' partial likelihood
-\item A penalized Cox model with main effects, where the \(\|\blank\|_1 +
-  \|\blank\|_2\) penalty (elastic net) is used and the penalty parameter is
-selected using cross-validation based on Cox' partial likelihood
-\end{itemize}
-
-\begin{figure}[htbp]
-\centering
-\includegraphics[width=1\linewidth]{/tmp/babel-IUB42s/figure-xTZcFV.pdf}
-Zelefsky simulation setting including LASSO into the library
-\end{figure}
 
 
 
 \section{References}
-\label{sec:org3ba31f0}
+\label{sec:orgdc8dbd8}
 \renewcommand{\section}[2]{} 
 \bibliography{./latex-settings/default-bib.bib}
 \end{document}
