--- a/tex/bib.bib
+++ b/tex/bib.bib
@@ -1559,3 +1559,29 @@
   year={2007},
   publisher={Wiley Online Library}
 }
+@Manual{Polley_Ledell_Kennedy_Laan_2023_Superlearn,
+    title = {SuperLearner: Super Learner Prediction},
+    author = {Eric Polley and Erin LeDell and Chris Kennedy and Mark {van der Laan}},
+    year = 2023,
+    note = {R package version 2.0-28.1},
+    url = {https://CRAN.R-project.org/package=SuperLearner},
+}
+@article{kattan2018index,
+  title={The index of prediction accuracy: an intuitive measure useful for evaluating risk prediction models},
+  author={Kattan, Michael W and Gerds, Thomas A},
+  journal={Diagnostic and prognostic research},
+  volume=2,
+  pages={1--7},
+  year=2018,
+  publisher={Springer}
+}
+@article{kragholm2017bystander,
+  title={Bystander efforts and 1-year outcomes in out-of-hospital cardiac arrest},
+  author={Kragholm, Kristian and Wissenberg, Mads and Mortensen, Rikke N and Hansen, Steen M and Malta Hansen, Carolina and Thorsteinsson, Kristinn and Rajan, Shahzleen and Lippert, Freddy and Folke, Fredrik and Gislason, Gunnar and others},
+  journal={New England Journal of Medicine},
+  volume={376},
+  number={18},
+  pages={1737--1747},
+  year={2017},
+  publisher={Mass Medical Soc}
+}
