--- a/figures/zel-tab.tex
+++ b/figures/zel-tab.tex
@@ -1,18 +1,18 @@
-% latex table generated in R 4.0.3 by xtable 1.8-4 package
-% Thu Aug 24 20:38:52 2023
+% latex table generated in R 4.3.2 by xtable 1.8-4 package
+% Thu Mar 14 10:20:05 2024
 \begin{tabular}{lll|l}
   \toprule
 Tumor learner & Death learner & Censoring learner & Integrated Brier score \\ 
   \midrule
-\texttt{Elastic} & \texttt{Elastic} & \texttt{RF} & $7.03\pm0.02$ \\ 
-  \texttt{Elastic} & \texttt{KM} & \texttt{RF} & $7.03\pm0.02$ \\ 
-  \texttt{Lasso} & \texttt{Elastic} & \texttt{RF} & $7.04\pm0.02$ \\ 
-  \texttt{Lasso} & \texttt{KM} & \texttt{RF} & $7.04\pm0.02$ \\ 
-  \texttt{Elastic} & \texttt{Lasso} & \texttt{RF} & $7.04\pm0.02$ \\ 
-  \texttt{Cox strata CT} & \texttt{Elastic} & \texttt{RF} & $7.04\pm0.03$ \\ 
-  \texttt{Lasso} & \texttt{Lasso} & \texttt{RF} & $7.04\pm0.02$ \\ 
-  \texttt{Cox strata CT} & \texttt{Lasso} & \texttt{RF} & $7.04\pm0.03$ \\ 
-  \texttt{Cox strata CT} & \texttt{KM} & \texttt{RF} & $7.04\pm0.03$ \\ 
-  \texttt{Elastic} & \texttt{RF} & \texttt{RF} & $7.04\pm0.02$ \\ 
+\texttt{RF} & \texttt{KM} & \texttt{RF} & $7.02\pm0.05$ \\ 
+  \texttt{Cox strata CT} & \texttt{Elastic} & \texttt{RF} & $7.03\pm0.03$ \\ 
+  \texttt{RF} & \texttt{Elastic} & \texttt{RF} & $7.03\pm0.05$ \\ 
+  \texttt{RF} & \texttt{RF} & \texttt{RF} & $7.03\pm0.05$ \\ 
+  \texttt{Cox strata CT} & \texttt{Lasso} & \texttt{RF} & $7.03\pm0.03$ \\ 
+  \texttt{RF} & \texttt{Lasso} & \texttt{RF} & $7.03\pm0.05$ \\ 
+  \texttt{Elastic} & \texttt{Elastic} & \texttt{RF} & $7.03\pm0.03$ \\ 
+  \texttt{Lasso} & \texttt{Elastic} & \texttt{RF} & $7.03\pm0.03$ \\ 
+  \texttt{Elastic} & \texttt{Lasso} & \texttt{RF} & $7.03\pm0.03$ \\ 
+  \texttt{Lasso} & \texttt{Lasso} & \texttt{RF} & $7.03\pm0.03$ \\ 
    \bottomrule
 \end{tabular}
