--- a/tex/latex-settings/default-bib.bib
+++ b/tex/latex-settings/default-bib.bib
@@ -1210,3 +1210,10 @@
   pages={2526},
   year={2020}
 }
+@Manual{Polley_Ledell_Kennedy_Laan_2023_Superlearn,
+    title = {SuperLearner: Super Learner Prediction},
+    author = {Eric Polley and Erin LeDell and Chris Kennedy and Mark {van der Laan}},
+    year = 2023,
+    note = {R package version 2.0-28.1},
+    url = {https://CRAN.R-project.org/package=SuperLearner},
+}
