--- a/tex/jrss-version/state-learner-jrss-style.tex
+++ b/tex/jrss-version/state-learner-jrss-style.tex
@@ -4,13 +4,15 @@
 \usepackage{natbib, dsfont, enumitem,
   amssymb,soul,xcolor,amsmath,graphicx,verbatim,pgfplots,tikz,prodint,booktabs}
 
+\usepackage[tablesonly,heads,nolists]{endfloat}
+
 %% Theorem environment
 % \theoremstyle{plain} % plain italic style
 \newtheorem{theorem}{Theorem}
-\numberwithin{theorem}{section}
-\newtheorem{lemma}[theorem]{Lemma}
-\newtheorem{proposition}[theorem]{Proposition}
-\newtheorem{corollary}[theorem]{Corollary}
+% \numberwithin{theorem}{section}
+\newtheorem{lemma}{Lemma}
+\newtheorem{proposition}{Proposition}
+\newtheorem{corollary}{Corollary}
 
 %% Only for comments:
 \usepackage[author=]{fixme}
@@ -20,6 +22,27 @@
 \fxsetup{status=draft}
 
 \bibliographystyle{rss}
+
+%% Toggle with or without figures
+\def\nofig{1}
+
+%% TODO: Update figures with name 'figure-'.
+%% Write macro for including figure or not.
+
+% \newcommand{\includeFigCond}[2]{
+%   \ifx\nofig\undefined %
+%     \includegraphics[#1]{#2} %
+%   \else %
+%     \texttt{#2} %
+%   \fi %
+% }
+\newcommand{\includeFigCond}[2][]{
+  \ifx\nofig\undefined %
+    \includegraphics[#1]{#2} %
+  \else %
+    \texttt{#2} %
+  \fi %
+}
 
 % New operators and commands
 \DeclareMathOperator{\E}{\mathbb{E}} % expectation
@@ -56,12 +79,11 @@
 \newcommand{\data}{\ensuremath{\mathcal{D}}}
 
 \title[The state learner]{The state learner \\ {-- a super learner for right-censored data}}
-\author[Anders Munch {\it et al.}]{Anders Munch}
+\author{Anders Munch}
 \address{Section of Biostatistics, University of Copenhagen, Copenhagen, Denmark}
 \email{a.munch@sund.ku.dk}
-\author{Thomas A.\ Gerds}
+\author[Munch {\it et al.}]{Thomas A.\ Gerds}
 \address{Section of Biostatistics, University of Copenhagen, Copenhagen, Denmark}
-
 
 \begin{document}
 
@@ -83,8 +105,8 @@
   hazards of interest nor the censoring distribution.
 \end{abstract}
 
-\keywords{Loss based estimation, right-censored data, competing risks, super
-  learner, cross-validation}
+\keywords{Competing risks, cross-validation, loss based estimation,
+  right-censored data, super learner}
 
 \section{Introduction}
 \label{sec:introduction}
@@ -104,7 +126,7 @@ While the general idea of combining strong learners based on cross-validation
 data stems from earlier work \citep{wolpert1992stacked,breiman1996stacked}, the
 name super learner is justified by an oracle inequality
 \citep{van2003unicv,vaart2006oracle}: The super learner is guaranteed to perform
-almost as well as the model which minimizes the expected performance, i.e., the
+almost as well as the model which minimises the expected performance, i.e., the
 model we would select if we could evaluate the prediction performance in an
 infinite hold-out sample.
 
@@ -119,7 +141,7 @@ restrict their learners to Cox proportional hazard models. A lesser known fact
 is that a super learner constructed with the negative partial log-likelihood
 loss implicitly depends on the censoring distribution
 \citep{hjort1992inference,whitney2019comment}. A disadvantage of inverse
-probability of censoring weighted loss functions is that they requires a
+probability of censoring weighted loss functions is that they require a
 pre-specified model for the censoring distribution. \cite{westling2021inference}
 tackle this challenge by iterating between super learning of the censoring
 distribution and the event time distribution.
@@ -133,7 +155,7 @@ estimators, works in the presence of competing risks, and does not require a
 single pre-specified estimator of the conditional censoring distribution. To
 analyze the theoretical properties of the state learner we focus on the
 so-called discrete super learner which `combines' the library of
-learners by picking the one that minimizes the cross-validated loss. The state
+learners by picking the one that minimises the cross-validated loss. The state
 learner uses separate libraries to model each competing event and the censoring
 distribution. We show that the oracle selector of the state learner is
 consistent if all libraries contain a consistent learner and prove a finite
@@ -149,7 +171,7 @@ second order product structure for the asymptotic bias term of the targeted
 estimator is retained when the state learner is used to estimate nuisance
 parameters.
 
-The article is organized as follows. We introduce our notation and framework in
+The article is organised as follows. We introduce our notation and framework in
 Section~\ref{sec:framework}. In Section~\ref{sec:super-learning} we define super
 learning in general with right-censored data, and in
 Section~\ref{sec:relat-liter-exist} we review existing methods.
@@ -190,7 +212,7 @@ event-free survival function,
 \end{equation}
 Let \( \mathcal{M} \) denote the space of all conditional cumulative hazard
 functions on \( [0,\tau] \times\mathcal{X}\). Any distribution
-\( Q \in \mathcal{Q} \) can be characterized by
+\( Q \in \mathcal{Q} \) can be characterised by
 \begin{equation*}
   \label{eq:parametrizeQ}
   \begin{split}
@@ -210,7 +232,7 @@ on the sample space
 \(O \sim P \) for some unknown \(P\in \mathcal{P}\). We assume that the event
 time and the censoring time are conditionally independent given covariates,
 \( T \independent C \mid X \). This implies that any distribution
-\( P \in \mathcal{P} \) is characterized by a distribution
+\( P \in \mathcal{P} \) is characterised by a distribution
 \( Q \in \mathcal{Q} \) and a conditional cumulative hazard function for \( C \)
 given \( X \) \citep[c.f.,][]{begun1983information,gill1997coarsening}. We use
 \(\Gamma\in\mathcal M\) to denote the conditional cumulative hazard function for
@@ -254,8 +276,8 @@ Thus, we can consider $\Lambda_j$ and \(\Gamma\) as operators which map from
 A super learner estimates a parameter $\Psi$ which can be identified from the
 observed data distribution \(P\in\mathcal P\). In this section, to introduce the
 concept of super learning, we simply consider estimation of the function
-\( \Lambda_{j}\). The parameter \(\Psi:\mathcal P\to\mathcal M\) is then
-identified via equation \eqref{eq:lambdaj} by \(\Psi(P)=\Lambda_j\).
+\( \Lambda_{j}\). In this case, the parameter \(\Psi:\mathcal P\to\mathcal M\)
+is identified via equation \eqref{eq:lambdaj} by \(\Psi(P)=\Lambda_j\).
 
 As input to the super learner we need a sample \( \data_n=\{O_i\}_{i=1}^n \) of
 i.i.d.\ observations from some unknown \( P \in \mathcal{P} \) and a finite
@@ -300,7 +322,7 @@ The discrete super learner is defined as
 \end{equation*}
 The final estimator of \(\Psi(P)=\Lambda_j\) is then the selected
 learner applied to the full data set, i.e., \(\hat{a}_n(\data_n)\).
-The oracle learner is defined as the learner that minimizes the
+The oracle learner is defined as the learner that minimises the
 average loss according to the data-generating distribution \( P \),
 i.e.,
 \begin{equation*}
@@ -393,8 +415,8 @@ multi-state process
 Note that at time \(t\), we observe that each observation is in one of four
 mutually exclusive states (Figure \ref{fig:multi-state-process}).
 \begin{figure}[h]
-  \centering
-  \includegraphics[width=.5\textwidth]{./figure-multi-state-process.pdf}
+  \centering %
+  \includeFigCond[width=.5\textwidth]{figure-multi-state-process.pdf}
   \caption{Illustration of the multi-state process \(\eta\) used by
     the state learner. Note that `censored' is a state, hence the
     process is always observed at any time.}
@@ -417,7 +439,7 @@ probabilities corresponding to the observed multi-state process
 We propose to construct a super learner for \( F \), i.e., the target of this
 super learner is $\Psi(P) = F$ where the parameter is identified through
 equation~(\ref{eq:F-def}). Because each quadruple
-$(\Lambda_{1}, \Lambda_{2}, \Gamma, H)$ characterizes a \(P\in\mathcal P\) which
+$(\Lambda_{1}, \Lambda_{2}, \Gamma, H)$ characterises a \(P\in\mathcal P\) which
 in turn determines \( (F, H) \), a learner for \( F \) can be constructed from
 learners of \( \Lambda_1 \), \( \Lambda_2 \), and $\Gamma$ as follows:
 \begin{equation}\label{eq:transition}
@@ -513,7 +535,7 @@ In this section we establish theoretical guarantees for the state learner.
 Proposition~\ref{prop:stric-prop} can be derived from the fact that the
 integrated Brier score (also called the continuous ranked probability score) is
 a strictly proper scoring rule \citep{gneiting2007strictly}. This implies that
-if we minimize the average loss of the integrated Brier score, we recover the
+if we minimise the average loss of the integrated Brier score, we recover the
 parameters of the data-generating distribution. In particular, the oracle of a
 state learner will be consistent if the library of learners contains at least
 one learner that is consistent for estimation of \( F \). Recall that the
@@ -548,7 +570,7 @@ presentation we take \( n \) to be such that
 \( |\data_n^{-k}| = n/K \) with \( K \) fixed. We will allow the
 number of learners to grow with \( n \) and write
 \( \mathcal{F}_n=\mathcal{F}(\mathcal{A}_{1,n}, \mathcal{A}_{2,n},
-\mathcal{B}_n)\) as short-hand notation and to emphasize the
+\mathcal{B}_n)\) as short-hand notation and to emphasise the
 dependence on \( n \).
 % The discrete super $\hat{\phi}_n$ and the
 % oracle $\tilde{\phi}_n$ are defined as in Section~\ref{sec:framework}
@@ -759,7 +781,8 @@ An example of a targeted estimator is the one-step estimator, defined as
       \hat{b}_n(\data_n) )]},
 \end{equation}
 where \( \empmeas \) is the empirical measure of a sample \(\{O_i\}_{i=1}^n\).
-We can make the following asymptotic expansion of the one-step estimator
+Under a suitable Donsker class regularity condition we can make the following
+asymptotic expansion of the one-step estimator
 \citep{pfanzagl1985contributions,van2003unified,fisher2021visually,kennedy2022semiparametric,rytgaard2022continuous},
 \begin{equation*}
   \hat{\Psi}_{\text{OS}}(\data_n)- \Psi(P)
@@ -781,11 +804,9 @@ where the remainder term is typically such that
   },
 \end{equation}
 for some suitable norm \( \|\blank \| \), for instance the
-\( \mathcal{L}_{P}^2 \)-norm. Hence, under a suitable Donsker class regularity
-condition \citep{bickel1993efficient,kennedy2016semiparametric}, when
-equation~(\ref{eq:4}) holds and the nuisance parameters $\Lambda_1$,
-$\Lambda_2$, and $\Gamma$ are consistently estimated at rate
-\( \smallO_P{(n^{-1/4})} \), then
+\( \mathcal{L}_{P}^2 \)-norm. Hence when equation~(\ref{eq:4}) holds and the
+nuisance parameters $\Lambda_1$, $\Lambda_2$, and $\Gamma$ are consistently
+estimated at rate \( \smallO_P{(n^{-1/4})} \), then
 \begin{equation}
   \label{eq:3}
   \sqrt{n}(\hat{\Psi}_{\text{OS}}(\data_n)- \Psi(P)) \weakly \mathcal{N}(0,
@@ -802,18 +823,11 @@ calculating
     \hat{\Psi}_{\text{OS}}(\data_n) + q_{\alpha/2} \hat{\sigma}(\data_n)
   \right],
 \end{equation*}
-where \( q_{\alpha} \) is the \( (1-\alpha) \)-quantile or the standard normal
-distribution, and
-\begin{equation*}
-  \hat{\sigma}(\data_n) = 
-  \left(
-    \empmeas{
-      \left[
-        \psi(\blank; \hat{a}_{1,n}(\data_n), \hat{a}_{2,n}(\data_n),
-        \hat{b}_n(\data_n))^2
-      \right]}
-  \right)^{1/2}.
-\end{equation*}
+where \( q_{\alpha} \) is the \( (1-\alpha) \)-quantile of the standard normal
+distribution and
+\( \hat{\sigma}(\data_n)^2 = \empmeas{ \left[ \psi(\blank;
+    \hat{a}_{1,n}(\data_n), \hat{a}_{2,n}(\data_n), \hat{b}_n(\data_n))^2
+  \right]} \).
 
 
 \subsection{Average treatment effect on the cumulative incidence}
@@ -837,8 +851,8 @@ We assume throughout that $\pi$ is uniformly bounded away from \( 0 \) and
 all individuals we can use an existing super learner to estimate $\pi$
 \citep{Polley_Ledell_Kennedy_Laan_2023_Superlearn}, and we denote this estimator
 by $\hat{\pi}_n$. We use the empirical measure of \( \{W_1, \dots, W_n\} \) to
-estimate $\mu$, and denote this estimator by the $\hat{\mu}_n$. As parameter of
-interest we consider the standardized difference in the cumulative incidence due
+estimate $\mu$, and denote this estimator by $\hat{\mu}_n$. As parameter of
+interest we consider the standardised difference in the cumulative incidence due
 to cause 1 at time $\tau$, which can be expressed as
 \begin{equation*}
   \theta_{{\tau}}(Q) = \int_{\mathcal{W}} 
@@ -863,11 +877,10 @@ where \( (T^A, D^A) \) denotes potential outcomes \citep{hernanRobinsWhatIf}. In
 this case, the interpretation of $\theta_{\tau}$ is the difference in the
 average risk of cause \( 1 \) occurring before time \( \tau \) in the population
 if everyone had been given treatment (\( A=1 \)) compared to if no one had been
-given treatment.
+given treatment \( (A=0) \).
 
-Using equation~(\ref{eq:surv-def}), we may write
-\( \theta_{{\tau}}(Q) = \tilde{\Psi}_{t}^0(\Lambda_1, \Lambda_2, \mu) \),
-where
+Using equation~(\ref{eq:surv-def}) we may write
+\( \theta_{{\tau}}(Q) = \tilde{\Psi}_{t}^0(\Lambda_1, \Lambda_2, \mu) \), where
 \begin{equation}
   \label{eq:1}    
   \begin{split}
@@ -1006,8 +1019,8 @@ random survival forest \citep{ishwaran2008random,rfsrc-paclage}. We use the same
 library to learn the outcome and the censoring mechanism. To be precise, note
 that given a learner for the cumulative hazard function of the outcome event, we
 can typically use the same method to construct a learner of the cumulative
-hazard function of the censoring distribution. This would typically work by
-training the learner on the data set \( \data_n^c \), where
+hazard function of the censoring distribution. This works by training the
+learner on the data set \( \data_n^c \), where
 \( \data_n^c = \{O_i^c\}_{i=1}^n \) with
 \( O_i^c = (\tilde{T}_i, 1-\Delta, X_i) \). When we say that we use a learner
 for the cumulative hazard function of the outcome to learn the cumulative hazard
@@ -1023,8 +1036,9 @@ estimator only estimates the censoring model correctly in the simulation setting
 where censoring is independent. Both IPCW super learners are fitted using the
 \texttt{R}-package \texttt{riskRegression} \citep{Gerds_Ohlendorff_Ozenne_2023}.
 Each super learner provides a learner for the cumulative hazard function for the
-outcome of interest, and from this a risk prediction model can be obtained. We
-measure performance of each super learner by calculating the index of prediction
+outcome of interest, and from this a risk prediction model can be obtained
+(c.f., equation~(\ref{eq:surv-def}) with $\Lambda_2 = 0$). We measure
+performance of each super learner by calculating the index of prediction
 accuracy (IPA) \citep{kattan2018index} at a fixed time horizon (36 months) for
 the risk prediction model provided by the super learner. The IPA is 1 minus the
 ratio between the model's Brier score and the null model's Brier score, where
@@ -1046,7 +1060,8 @@ prediction models are close to the performance of the oracle, except for small
 sample sizes.
 
 \begin{figure}
-  \centerline{\includegraphics[width=1\linewidth]{./experiment-fig-sl-ipcw.pdf}}
+  \centering %
+  \includeFigCond[width=1\linewidth]{experiment-fig-sl-ipcw.pdf}
   \caption[]{For the risk prediction models provided by each of the super
     learners, the IPA is plotted against sample size. The results are based on
     1000 repetitions and the error bars are used to quantify the Monte Carlo
@@ -1067,7 +1082,8 @@ compared to the prediction models selected by \texttt{survSL} for most sample
 sizes.
 
 \begin{figure}
-  \centerline{\includegraphics[width=1\linewidth]{./experiment-fig-sl-survSL.pdf}}
+  \centering %
+  \includeFigCond[width=1\linewidth]{experiment-fig-sl-survSL.pdf}
   \caption[]{For the risk prediction models of both the outcome and the
     censoring probability provided by each of the super learners, the IPA is
     plotted against sample size. The results are based on 1000 repetitions and
@@ -1094,16 +1110,16 @@ without tumor recurrence.
 
 \begin{table}
   \caption{\label{tab:zel-library}Overview of the five learners used by the
-  state learner when applied to the prostate cancer data set. The Kaplan-Meier
-  estimator was fitted using the package \texttt{prodlim}
-  \citep{Gerds_2019prodlim}. All Cox models included all five covariates in
-  the model and were fitted using the package \texttt{survival}
-  \citep{survival-package}. All penalized Cox models included all five
-  covariates as linear predictors and were fitted using the package
-  \texttt{glmnet} \citep{glmnet-cox,glmnet-glm}. The random forest was fitted
-  with the package \texttt{randomForestSRC} \citep{rfsrc-paclage}.}
-\centering
-  \begin{tabular}{ lll }
+    state learner when applied to the prostate cancer data set. The Kaplan-Meier
+    estimator was fitted using the package \texttt{prodlim}
+    \citep{Gerds_2019prodlim}. All Cox models included all five covariates in
+    the model and were fitted using the package \texttt{survival}
+    \citep{survival-package}. All penalised Cox models included all five
+    covariates as linear predictors and were fitted using the package
+    \texttt{glmnet} \citep{glmnet-cox,glmnet-glm}. The random forest was fitted
+    with the package \texttt{randomForestSRC} \citep{rfsrc-paclage}.}
+  \centering
+  \begin{tabular}{lll}
     \toprule
     Family & Model & Description \\
     \midrule
@@ -1112,14 +1128,13 @@ without tumor recurrence.
            & \( \texttt{Cox strata CS} \)  & Cox model stratified on CS  \\
            % & \( \texttt{Cox strata HT} \)  & Cox model stratified on HT \\
            % & \( \texttt{Cox spline} \)  & PSA and RD modeled with splines \\ 
-    Penalized Cox & \texttt{Lasso} & Cox model with \( L_1 \)-norm penalty   \\
+    Penalised Cox & \texttt{Lasso} & Cox model with \( L_1 \)-norm penalty   \\
            % & \texttt{Ridge} & Cox model with \( L_2 \)-norm penalty \\
            & \texttt{Elastic} & Cox model with \( L_1 \)- and \( L_2 \)-norm penalty \\
     Random forest & \texttt{RF} & Random forest with default settings \\
     \bottomrule 
   \end{tabular}
 \end{table}
-
 
 This gives a library consisting of \( 5^3 = 125 \) learners for the conditional
 state occupation probability function \( F \) defined in
@@ -1134,7 +1149,8 @@ performance as measured by the integrated Brier score, as long as a random
 forest is used to model the censoring distribution.
 
 \begin{figure}
-  \centerline{\includegraphics[width=1\linewidth]{./zelefski-real-data.pdf}}
+  \centering %
+  \includeFigCond[width=1\linewidth]{zelefski-real-data.pdf}
   \caption[]{The results of applying the 125 combinations of learners to the
     prostate cancer data set. The learners are \texttt{KM} (KM), \texttt{Cox
       strata CS} (strata), \texttt{Lasso} (lasso), \texttt{Elastic} (elastic),
@@ -1162,14 +1178,17 @@ As an illustration, we use the learners of the three cumulative hazard functions
 selected by the state learner and the estimator defined in
 Section~\ref{sec:cause-spec-aver}, equation~(\ref{eq:one-step-comp-ate}), to
 estimate the average treatment effect of hormone therapy on risk of tumor
-recurrence and death. The results are shown in
+recurrence and death. The propensity score is estimated with a lasso model that
+includes all levels of interaction. The results are shown in
 Figure~\ref{fig:zelefski-real-target} for 6 month intervals after baseline with
 point wise 95\% confidence intervals. We see that hormone therapy appears to
 decrease the risk of tumor recurrence and increase the risk of death without
-tumor recurrence, but that not of the estimated effects are significant.
+tumor recurrence, but that none of the estimated effects are statistically
+significant from zero.
 
 \begin{figure}
-  \centerline{\includegraphics[width=1\linewidth]{./zelefsky-data-target-par.pdf}}
+  \centering%
+  \includeFigCond[width=1\linewidth]{zelefsky-data-target-par.pdf}
   \caption[]{Estimates of the average treatment effect of hormone therapy on the
     risk of tumor recurrence and death obtained from the prostate cancer study
     analyzed by \cite{kattan2000pretreatment}. The estimates are based on the
@@ -1202,7 +1221,7 @@ observed data distribution when the data are right-censored. The finite sample
 oracle inequality in Corollary~\ref{cor:oracle-prop} concerns the function
 \( F \), which is a feature of \( P \in \mathcal{P} \), while what we are
 typically interested in is \( \Lambda_j \) or \( S \), which are features of
-\( Q \in \mathcal{Q} \). We emphasize that while the state learner provides us
+\( Q \in \mathcal{Q} \). We emphasise that while the state learner provides us
 with estimates of \( \Lambda_j \) and $\Gamma$ based on libraries
 \( \mathcal{A}_j \) and \( \mathcal{B} \), performance are not assessed directly
 for these parameters, but only jointly for estimation of the parameter \( F \).
@@ -1242,7 +1261,7 @@ in the time argument. This simplifies the calculation of \( F \) as the
 integrals in equation~(\ref{eq:transition}) reduce to sums. When $\Lambda_j$ or
 \( \Gamma \) are absolutely continuous in the time argument, calculating \( F \)
 is more involved, but we expect that a good approximation can be achieved by
-discretization. In the future, we intend to investigate the performance of the
+discretisation. In the future, we intend to investigate the performance of the
 state learner when using a broader library of learners in more comprehensive
 simulation studies.
 
@@ -1425,9 +1444,12 @@ and then the final result follows from Lemma~\ref{lemma:norm}.
 
 \begin{proof}[Proof of Corollary~\ref{cor:asymp-cons}]
   By definition of the oracle and Lemma~\ref{lemma:norm},
-  \( \E_{P_0}{\left[ \Vert \tilde{\phi}_n(\data_n^{-k}) - F_0 \Vert_{P_0}^2 \right]}
-  \leq \E_{P_0}{\left[ \Vert \phi_n(\data_n^{-k}) - F_0 \Vert_{P_0}^2 \right]} \) for
-  all \( n \in \N \). The results then follows from
+  \begin{equation*}
+    \E_{P_0}{\left[ \Vert \tilde{\phi}_n(\data_n^{-k}) - F_0 \Vert_{P_0}^2
+      \right]} \leq \E_{P_0}{\left[ \Vert \phi_n(\data_n^{-k}) - F_0 \Vert_{P_0}^2
+      \right]}  
+  \end{equation*}
+  for all \( n \in \N \). The results then follows from
   Corollary~\ref{cor:oracle-prop}.
 \end{proof}
 
@@ -1435,7 +1457,7 @@ and then the final result follows from Lemma~\ref{lemma:norm}.
 \section{The state learner with targeted learning}
 \label{sec:state-learner-with}
 
-In this section show that a product structure is preserved when the estimator
+In this section show that a product structure is preserved when an estimator
 $\bar\Psi(\hat{F}_n, \hat{H}_n)$ is used instead of
 $\tilde\Psi(\hat{\Lambda}_n, \hat{\Gamma}_n, \hat{H}_n)$.
 
