--- a/tex/jrss-version/zel-tab.tex
+++ b/tex/jrss-version/zel-tab.tex
@@ -1,6 +1,6 @@
 % latex table generated in R 4.3.2 by xtable 1.8-4 package
-% Thu Mar 14 10:20:05 2024
-\begin{tabular}{lll|l}
+% Thu Mar 21 11:25:25 2024
+\begin{tabular}{lllr}
   \toprule
 Tumor learner & Death learner & Censoring learner & Integrated Brier score \\ 
   \midrule
